# serializer version: 1
# name: test_all_entities[number.zinvolt_batterij_maximum_charge_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.zinvolt_batterij_maximum_charge_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum charge level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Maximum charge level',
    'platform': 'zinvolt',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'upper_threshold',
    'unique_id': 'ZVG011025120088.upper_threshold',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[number.zinvolt_batterij_maximum_charge_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Zinvolt Batterij Maximum charge level',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.zinvolt_batterij_maximum_charge_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_all_entities[number.zinvolt_batterij_maximum_output-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 800,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.zinvolt_batterij_maximum_output',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum output',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Maximum output',
    'platform': 'zinvolt',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'max_output',
    'unique_id': 'ZVG011025120088.max_output',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_all_entities[number.zinvolt_batterij_maximum_output-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Zinvolt Batterij Maximum output',
      'max': 800,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.zinvolt_batterij_maximum_output',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '800',
  })
# ---
# name: test_all_entities[number.zinvolt_batterij_minimum_charge_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 9,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.zinvolt_batterij_minimum_charge_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum charge level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Minimum charge level',
    'platform': 'zinvolt',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lower_threshold',
    'unique_id': 'ZVG011025120088.lower_threshold',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[number.zinvolt_batterij_minimum_charge_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Zinvolt Batterij Minimum charge level',
      'max': 100,
      'min': 9,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.zinvolt_batterij_minimum_charge_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_all_entities[number.zinvolt_batterij_standby_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 60,
      'min': 5,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.zinvolt_batterij_standby_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Standby time',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Standby time',
    'platform': 'zinvolt',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'standby_time',
    'unique_id': 'ZVG011025120088.standby_time',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_all_entities[number.zinvolt_batterij_standby_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Zinvolt Batterij Standby time',
      'max': 60,
      'min': 5,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.zinvolt_batterij_standby_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '60',
  })
# ---
